--- a/cloudFrontEnd/src/app/change-password/change-password.component.html
+++ b/cloudFrontEnd/src/app/change-password/change-password.component.html
@@ -9,7 +9,7 @@
              [style]="'display: '+(successMessage != '' ? 'inline-block' : 'none')">{{successMessage}}</div>
       </div>
       <div>
-        <mat-form-field appearance="outline">
+        <mat-form-field appearance="outline" [style.width.px]="280">
           <mat-label>Current Password</mat-label>
           <input matInput type="password" [formControl]="getFormControl('oldPassword')"
                  autocomplete="off"
@@ -22,7 +22,7 @@
         </mat-form-field>
       </div>
       <div>
-        <mat-form-field appearance="outline">
+        <mat-form-field appearance="outline" [style.width.px]="280">
           <mat-label>New Password</mat-label>
           <input matInput type="password" [formControl]="getFormControl('newPassword')"
                  matTooltip="Enter the new password, this must be between 8 and 32 characters in length and can contain alpha, numeric and special characters"
@@ -35,14 +35,14 @@
         </mat-form-field>
       </div>
       <div>
-        <mat-form-field appearance="outline">
+        <mat-form-field appearance="outline" [style.width.px]="280">
           <mat-label>Confirm new password</mat-label>
           <input matInput type="password" [formControl]="getFormControl('confirmNewPassword')"
                  matTooltip="Enter the new password again"
                  matTooltipClass="tooltip"
                  placeholder="Confirm new password">
           <mat-error *ngIf="hasError('confirmNewPassword', 'required')">Confirm password is required</mat-error>
-          <mat-error *ngIf="hasError('confirmNewPassword', 'confirmNewPassword')">Confirmed new password and New
+          <mat-error *ngIf="hasError('confirmNewPassword', 'confirmNewPassword')">Confirm new password and New
             password differ
           </mat-error>
 <!--          <mat-hint>Enter new password again</mat-hint>-->
