--- a/cloudFrontEnd/src/app/activemq-credentials/activemq-credentials.component.html
+++ b/cloudFrontEnd/src/app/activemq-credentials/activemq-credentials.component.html
@@ -64,12 +64,12 @@
       </div>
       <span class="confirm-group">
       <button color="cancel" mat-raised-button (click)="hideRegisterForm()"
-              matTooltip="{{reporting.success == undefined ? 'Close this dialogue and abandon setting up an account': 'Close this dialogue box'}}"
+              matTooltip="{{success == false ? 'Close this dialogue and abandon setting up an account': 'Close this dialogue box'}}"
               matTooltipClass="tooltip">
-        {{reporting.success == undefined ? 'Cancel' : 'Exit'}}
+        {{success == false ? 'Cancel' : 'Exit'}}
       </button>
       <button color="warn" mat-raised-button
-              [disabled]="error || anyInvalid() || reporting.success != undefined"
+              [disabled]="error || anyInvalid() || success != false"
               (click)="formValidator()"
               matTooltip="Register the new account"
               matTooltipClass="tooltip">
