* Fix getSnapshot not working

--- a/cloudFrontEnd/src/app/config-setup/camera-credentials/onvif-credentials.component.html
+++ b/cloudFrontEnd/src/app/config-setup/camera-credentials/onvif-credentials.component.html
@@ -4,12 +4,13 @@
   <mat-card-content>
     <div>
       <mat-form-field appearance="outline" [style.width.px]="225">
+          <mat-label>User name</mat-label>
         <input matInput type="text" autocomplete="off" maxlength="20"
                [formControl]="getFormControl('cameraUserName')"
                [matTooltip]="usernameTooltip"
                matTooltipClass="tooltip"
                placeholder="User name">
-        <mat-label>Admin user name for the cameras</mat-label>
+        <mat-hint>Admin user name for the cameras</mat-hint>
         <mat-error *ngIf="setPasswordForm.controls['cameraUserName'].hasError('pattern')">5 or more characters and
           numbers
         </mat-error>
@@ -19,12 +20,13 @@
     </div>
     <div>
       <mat-form-field appearance="outline" [style.width.px]="225">
+        <mat-label>Password</mat-label>
         <input matInput type="password" autocomplete="new-password" maxlength="25"
                [formControl]="getFormControl('cameraPassword')"
                [matTooltip]="passwordTooltip"
                matTooltipClass="tooltip"
                placeholder="Password">
-        <mat-label>Admin password for the cameras</mat-label>
+        <mat-hint>Admin password for the cameras</mat-hint>
         <mat-error *ngIf="setPasswordForm.controls['cameraPassword'].hasError('pattern')">Upper, lower case, numbers
           and special chars
         </mat-error>
