--- a/cloudFrontEnd/src/app/activemq-credentials/activemq-credentials.component.html
+++ b/cloudFrontEnd/src/app/activemq-credentials/activemq-credentials.component.html
@@ -66,10 +66,10 @@
       <button color="cancel" mat-raised-button (click)="hideRegisterForm()"
               matTooltip="{{success == false ? 'Close this dialogue and abandon setting up an account': 'Close this dialogue box'}}"
               matTooltipClass="tooltip">
-        {{success == false ? 'Cancel' : 'Exit'}}
+        {{!success ? 'Cancel' : 'Exit'}}
       </button>
       <button color="warn" mat-raised-button
-              [disabled]="error || anyInvalid() || success != false"
+              [disabled]="error || anyInvalid() || success"
               (click)="formValidator()"
               matTooltip="Register the new account"
               matTooltipClass="tooltip">
