--- a/cloudFrontEnd/src/app/change-email/change-email.component.html
+++ b/cloudFrontEnd/src/app/change-email/change-email.component.html
@@ -4,35 +4,41 @@
     <mat-card-content>
       <form (ngSubmit)="$event.preventDefault(); formSubmitted()" [formGroup]="changeEmailForm">
         <div>
-          <mat-form-field appearance="outline" [style.width.px]="300">
+          <mat-form-field appearance="outline">
             <input matInput type="password" formControlName="password"
-                   autocomplete="off"
-                   placeholder="Enter password">
+                   placeholder="Enter password"
+                   matTooltip="Enter the user password"
+                   matTooltipClass="tooltip">
+            <mat-label>Password</mat-label>
             <mat-error *ngIf="hasError('password', 'required')">Password is required</mat-error>
             <mat-error *ngIf="hasError('password', 'pattern')">Password incorrect</mat-error>
-            <mat-label>Enter password</mat-label>
+            <mat-hint>Enter password</mat-hint>
           </mat-form-field>
         </div>
         <div>
           <mat-form-field appearance="outline" class="email-input">
-            <mat-label>New email address</mat-label>
             <input matInput type="text" formControlName="newEmail" autocomplete="off" maxlength="40"
-                   placeholder="New password">
+                   placeholder="New email address"
+                   matTooltip="Enter the required email address"
+                   matTooltipClass="tooltip">
+            <mat-label>New email address</mat-label>
             <mat-error *ngIf="hasError('newEmail', 'required')">Email address required</mat-error>
-            <mat-error *ngIf="hasError('newEmail', 'pattern')">Email format is incorrect
+            <mat-error *ngIf="hasError('newEmail', 'pattern') && !hasError('newEmail', 'required')">Email format is incorrect
             </mat-error>
             <mat-hint>Enter new email address</mat-hint>
           </mat-form-field>
         </div>
         <div>
           <mat-form-field appearance="outline" class="email-input">
-
-            <input matInput type="text" formControlName="confirmNewEmail" autocomplete="off" maxlength="40"
-                   placeholder="Confirm new email address">
-            <mat-error *ngIf="hasError('confirmNewEmail', 'required')">Confirm new email address is required</mat-error>
-            <mat-error *ngIf="hasError('confirmNewEmail', 'confirmNewEmail') && !hasError('confirmNewEmail', 'required')">Confirm new email and new email differ
-            </mat-error>
+            <input matInput type="text" formControlName="confirmNewEmail" height="12" autocomplete="off" maxlength="40"
+                   placeholder="Confirm new email address"
+                   matTooltip="Please confirm the email address"
+                   matTooltipClass="tooltip">
             <mat-label>Confirm new email address</mat-label>
+            <mat-error *ngIf="hasError('confirmNewEmail', 'required')">Confirm new email address is required</mat-error>
+            <mat-error *ngIf="hasError('confirmNewEmail', 'confirmNewEmail') ">Confirm new email and new email differ
+            </mat-error>
+            <mat-hint>Enter new email again</mat-hint>
           </mat-form-field>
         </div>
         <div class="button-container">
