--- a/cloudFrontEnd/src/app/multi-cam-view/multi-cam-view.component.html
+++ b/cloudFrontEnd/src/app/multi-cam-view/multi-cam-view.component.html
@@ -6,16 +6,29 @@
     <mat-icon>settings</mat-icon>
   </button>
   <div class="mat-elevation-z15" [@detailExpand]="showStreamSelector ? 'expanded' : 'collapsed'">
-    <div class="setting_item">
+    <div>
       <div>
       </div>
       <mat-card class="camera-select mat-elevation-z8 hide-background">
-        <mat-card-title>
-          Select Camera streams
-        </mat-card-title>
-
+          <mat-card-content>
+              <mat-card-subtitle>
+                  Number of columns
+              </mat-card-subtitle>
+              <mat-radio-group [value]="numColumns">
+                  @for (column of [0,1,2,3]; track column) {
+                      <mat-radio-button (click)="setNumColumns(column)" [value]="column">
+                          {{["one","two","three","four"][column]}}
+                      </mat-radio-button>
+                      <span>&nbsp;&nbsp;</span>
+                  }
+              </mat-radio-group>
+          </mat-card-content>
         <mat-card-content>
-          <table mat-table [dataSource]="cams | keyvalue" multiTemplateDataRows class="mat-elevation-z8">
+            <mat-card-subtitle>
+                Select Camera streams
+            </mat-card-subtitle>
+
+            <table mat-table [dataSource]="cams | keyvalue: cameraSvc.compareFn" multiTemplateDataRows class="mat-elevation-z8">
             <ng-container matColumnDef="name">
               <th mat-header-cell *matHeaderCellDef>Camera</th>
               <td mat-cell *matCellDef="let cam">{{cam.value.name}}</td>
@@ -37,7 +50,7 @@
               <td mat-cell *matCellDef="let cam" [attr.colspan]="cameraColumns.length">
                 <div class="element-detail mat-elevation-z10"
                      [@detailExpand]="cam.value == expandedElement ? 'expanded' : 'collapsed'">
-                  <table mat-table [dataSource]="cam.value.streams | keyvalue"
+                  <table mat-table [dataSource]="cam.value.streams | keyvalue: cameraSvc.compareFn"
                          class="streams-info mat-elevation-z10">
                     <ng-container matColumnDef="select">
                       <th mat-header-cell *matHeaderCellDef>Select Stream To Display</th>
@@ -65,7 +78,7 @@
               <!--          <tr mat-footer-row *matFooterRowDef="cameraFooterColumns"></tr>-->
           </table>
         </mat-card-content>
-        <button color="primary" mat-raised-button (click)="showStreamSelector=false"
+        <button color="cancel" mat-raised-button (click)="showStreamSelector=false"
                 matTooltip="Close this form"
                 matTooltipClass="tooltip">
           Done
@@ -76,7 +89,7 @@
 </div>
 <app-reporting></app-reporting>
 <div class="flex-container-vid">
-  <ng-container *ngFor="let cam of cams | keyvalue">
+  <ng-container *ngFor="let cam of cams | keyvalue: cameraSvc.compareFn">
     <app-video [isFmp4]="true"></app-video>
   </ng-container>
 </div>
