* Copy some version 12 changes over from NVR * Convert some components to standalone.

--- a/cloudFrontEnd/src/app/change-password/change-password.component.html
+++ b/cloudFrontEnd/src/app/change-password/change-password.component.html
@@ -1,61 +1,51 @@
 <div class="change-password-container">
-  <mat-card class="mat-elevation-z8" xmlns="http://www.w3.org/1999/html">
-    <mat-card-title>Change Password</mat-card-title>
-    <mat-card-content>
-      <div class="message-display">
-        <div class="alert-danger mat-elevation-z4"
-             [style]="'display: '+(errorMessage != '' ? 'inline-block' : 'none')">{{errorMessage}}</div>
-        <div class="alert-success mat-elevation-z4"
-             [style]="'display: '+(successMessage != '' ? 'inline-block' : 'none')">{{successMessage}}</div>
-      </div>
-      <div>
-        <mat-form-field appearance="outline" [style.width.px]="280">
-          <mat-label>Current Password</mat-label>
-          <input matInput type="password" [formControl]="getFormControl('oldPassword')"
-                 autocomplete="off"
-                 matTooltip="Enter the current password"
-                 matTooltipClass="tooltip"
-                 placeholder="Enter current password">
-          <mat-error *ngIf="hasError('oldPassword', 'required')">Current password is required</mat-error>
-          <mat-error *ngIf="hasError('oldPassword', 'pattern')">Password incorrect</mat-error>
-<!--          <mat-hint>Enter current password</mat-hint>-->
-        </mat-form-field>
-      </div>
-      <div>
-        <mat-form-field appearance="outline" [style.width.px]="280">
-          <mat-label>New Password</mat-label>
-          <input matInput type="password" [formControl]="getFormControl('newPassword')"
-                 matTooltip="Enter the new password, this must be between 8 and 32 characters in length and can contain alpha, numeric and special characters"
-                 matTooltipClass="tooltip"
-                 placeholder="New password">
-          <mat-error *ngIf="hasError('newPassword', 'required')">New password is required</mat-error>
-          <mat-error *ngIf="hasError('newPassword', 'pattern')">New password contains invalid characters</mat-error>
-          <mat-error *ngIf="hasError('newPassword', 'tooShort')">New password is too short</mat-error>
-<!--          <mat-hint>Enter new password</mat-hint>-->
-        </mat-form-field>
-      </div>
-      <div>
-        <mat-form-field appearance="outline" [style.width.px]="280">
-          <mat-label>Confirm new password</mat-label>
-          <input matInput type="password" [formControl]="getFormControl('confirmNewPassword')"
-                 matTooltip="Enter the new password again"
-                 matTooltipClass="tooltip"
-                 placeholder="Confirm new password">
-          <mat-error *ngIf="hasError('confirmNewPassword', 'required')">Confirm password is required</mat-error>
-          <mat-error *ngIf="hasError('confirmNewPassword', 'confirmNewPassword')">Confirm new password and New
-            password differ
-          </mat-error>
-<!--          <mat-hint>Enter new password again</mat-hint>-->
-        </mat-form-field>
-      </div>
-      <div class="button-container">
-        <button mat-raised-button (click)="exit()" color="cancel">
-          {{successMessage==''?'Cancel':'Exit'}}
-        </button>
-        <button mat-raised-button [disabled]="anyInvalid() || successMessage != ''" (click)="formSubmitted()" color="warn">
-          Change Password
-        </button>
-      </div>
-    </mat-card-content>
-  </mat-card>
+    <mat-card class="mat-elevation-z8" xmlns="http://www.w3.org/1999/html">
+        <mat-card-title>Change Password</mat-card-title>
+        <mat-card-content>
+            <form (ngSubmit)="$event.preventDefault(); formSubmitted()" [formGroup]="changePasswordForm">
+                <div>
+        <mat-form-field appearance="outline" [style.width.px]="300">
+                        <mat-label>Current Password</mat-label>
+                        <input matInput type="password" formControlName="oldPassword" #oldPassword
+                               placeholder="Enter current password"
+                               matTooltip="Enter the current password"
+                               matTooltipClass="tooltip">
+            <mat-error *ngIf="hasError('oldPassword', 'required')">Current password is required</mat-error>
+                        <mat-error *ngIf="hasError('oldPassword', 'pattern')">Password incorrect</mat-error>
+                        <mat-hint>Enter current password</mat-hint>
+                    </mat-form-field>
+                </div>
+                <div>
+        <mat-form-field appearance="outline" [style.width.px]="300">
+                        <input matInput type="password" formControlName="newPassword" [maxLength]="64"
+                               placeholder="New password"
+                               matTooltip="Enter the new password, this must be between 8 and 32 characters in length and can contain alpha, numeric and special characters"
+                               matTooltipClass="tooltip">
+            <mat-label>New Password</mat-label>
+            <mat-error *ngIf="hasError('newPassword', 'required')">New password is required</mat-error>
+                        <mat-error *ngIf="hasError('newPassword', 'pattern') && !hasError('newPassword', 'required')">New password > 7 letters, numbers and special chars                       </mat-error>
+                        <mat-hint>Enter new password</mat-hint>
+                    </mat-form-field>
+                </div>
+                <div>
+        <mat-form-field appearance="outline" [style.width.px]="300">
+                        <mat-label>Confirm new password</mat-label>
+                        <input matInput type="password" formControlName="confirmNewPassword" #confirmNewPassword
+                               placeholder="Confirm new password"
+                               matTooltip="Enter the new password again"
+                               matTooltipClass="tooltip">
+            <mat-error *ngIf="hasError('confirmNewPassword', 'required')">Confirm new password is required</mat-error>
+                        <mat-error *ngIf="hasError('confirmNewPassword', 'confirmNewPassword')">Confirmed new password and New password differ
+                        </mat-error>
+                        <mat-hint>Enter new password again</mat-hint>
+                    </mat-form-field>
+                </div>
+                <div class="button-container">
+                    <button mat-raised-button [disabled]="changePasswordButtonDisabled()" color="warn">Change Password</button>
+                </div>
+            </form>
+        </mat-card-content>
+    </mat-card>
 </div>
+<app-reporting></app-reporting>
+
