--- a/cloudFrontEnd/src/app/accountAdmin/account-admin.component.html
+++ b/cloudFrontEnd/src/app/accountAdmin/account-admin.component.html
@@ -135,7 +135,7 @@
         </td>
       </ng-container>
 
-      <!-- Expanded Streams Column - The streams row is made up of this one column that spans across all columns -->
+      <!-- Expanded  Column -->
       <ng-container matColumnDef="expandedEditRow">
         <td mat-cell *matCellDef="let account" [attr.colspan]="displayedColumns.length">
           <div class="edit-element-detail mat-elevation-z10"
