--- a/cloudFrontEnd/src/app/register-account/register-account.component.html
+++ b/cloudFrontEnd/src/app/register-account/register-account.component.html
@@ -1,95 +1,102 @@
 <div class="register-container">
-  <mat-card class="mat-elevation-z8" xmlns="http://www.w3.org/1999/html">
-    <mat-card-title>Register a New Account</mat-card-title>
-    <mat-card-content>
-      <div class="message-display">
-        <div class="alert-danger mat-elevation-z4" [style]="'display: '+(errorMessage != '' ? 'inline-block' : 'none')">{{errorMessage}}</div>
-        <div class="alert-success mat-elevation-z4" [style]="'display: '+(successMessage != '' ? 'inline-block' : 'none')">{{successMessage}}</div>
-      </div>
-     <div>
-        <mat-form-field appearance="outline" class="register-account-input">
-          <input #username matInput type="text" autocomplete="off" maxlength="20"
-                 [formControl]="getFormControl('username')"
-                 (keydown)="confirmOnReturn($event)"
-                 matTooltip="Enter a Cloud Service user name."
-                 matTooltipClass="tooltip"
-                 placeholder="New User name">
-          <mat-label>User name for your Cloud account</mat-label>
-          <mat-error *ngIf="accountRegistrationForm.controls['username'].hasError('pattern')">5 or more characters and numbers
-          </mat-error>
-          <mat-error *ngIf="accountRegistrationForm.controls['username'].hasError('required')">User name is required</mat-error>
-        </mat-form-field>
-      </div>
-      <app-product-id-input [formControl]="getFormControl('productId')"></app-product-id-input>
-      <div>
-        <mat-form-field appearance="outline" class="register-account-input">
-          <input matInput type="password" autocomplete="off" maxlength="25"
-                 [formControl]="getFormControl('password')"
-                 (keydown)="confirmOnReturn($event)"
-                 matTooltip="Enter your Cloud Service password (Upper, lower case, numbers and special chars)"
-                 matTooltipClass="tooltip"
-                 placeholder="Password">
-          <mat-label>Password for the Cloud account</mat-label>
-          <mat-error *ngIf="accountRegistrationForm.controls['password'].hasError('required')">Password is required</mat-error>
-        </mat-form-field>
-      </div>
-      <div>
-        <mat-form-field appearance="outline" class="register-account-input">
-          <input matInput type="password" autocomplete="off" maxlength="25"
-                 [formControl]="getFormControl('confirmPassword')"
-                 (keydown)="confirmOnReturn($event)"
-                 matTooltip="Confirm your Cloud Service password"
-                 matTooltipClass="tooltip"
-                 placeholder="Confirm Password">
-          <mat-label>Confirm the password</mat-label>
-          <mat-error *ngIf="accountRegistrationForm.controls['confirmPassword'].hasError('notMatching')">Must match password
-          </mat-error>
-          <mat-error *ngIf="accountRegistrationForm.controls['confirmPassword'].hasError('required')">Confirm Password is required</mat-error>
-        </mat-form-field>
-      </div>
-      <div>
-        <mat-form-field appearance="outline" class="email-input">
-          <input matInput type="email" autocomplete="off" maxlength="40"
-                 [formControl]="getFormControl('email')"
-                 (keydown)="confirmOnReturn($event)"
-                 matTooltip="Enter your email address. This is required to provide a means of resetting forgotten passwords"
-                 matTooltipClass="tooltip"
-                 placeholder="email address">
-          <mat-label>Your email address</mat-label>
-          <mat-error *ngIf="accountRegistrationForm.controls['email'].hasError('pattern')">Please enter valid email address</mat-error>
-        </mat-form-field>
-      </div>
-      <div>
-        <mat-form-field appearance="outline" class="email-input">
-          <input matInput type="email" autocomplete="off" maxlength="40"
-                 [formControl]="getFormControl('confirmEmail')"
-                 (keydown)="confirmOnReturn($event)"
-                 matTooltip="Confirm your email address"
-                 matTooltipClass="tooltip"
-                 placeholder="Confirm email address">
-          <mat-label>Confirm email address</mat-label>
-          <mat-error *ngIf="accountRegistrationForm.controls['confirmEmail'].hasError('notMatching')">Must match email address
-          </mat-error>
-          <mat-error *ngIf="accountRegistrationForm.controls['confirmEmail'].hasError('required')">Confirm Password is required</mat-error>
-        </mat-form-field>
-      </div>
-      <span class="cam-creds-confirm-group">
+    <mat-card class="mat-elevation-z8" xmlns="http://www.w3.org/1999/html">
+        <mat-card-title>Register a New Account</mat-card-title>
+        <mat-card-content>
+            <app-reporting [embedded]="true"></app-reporting>
+            <div>
+                <mat-form-field appearance="outline" class="register-account-input">
+                    <input #username matInput type="text" autocomplete="off" maxlength="20"
+                           [formControl]="getFormControl('username')"
+                           (keydown)="confirmOnReturn($event)"
+                           matTooltip="Enter a Cloud Service user name."
+                           matTooltipClass="tooltip"
+                           placeholder="New User name">
+                    <mat-label>User name for your Cloud account</mat-label>
+                    <mat-error *ngIf="accountRegistrationForm.controls['username'].hasError('pattern')">5 or more
+                        characters and numbers
+                    </mat-error>
+                    <mat-error *ngIf="accountRegistrationForm.controls['username'].hasError('required')">User name is
+                        required
+                    </mat-error>
+                </mat-form-field>
+            </div>
+            <app-product-id-input [formControl]="getFormControl('productId')"></app-product-id-input>
+            <div>
+                <mat-form-field appearance="outline" class="register-account-input">
+                    <input matInput type="password" autocomplete="off" maxlength="25"
+                           [formControl]="getFormControl('password')"
+                           (keydown)="confirmOnReturn($event)"
+                           matTooltip="Enter your Cloud Service password (Upper, lower case, numbers and special chars)"
+                           matTooltipClass="tooltip"
+                           placeholder="Password">
+                    <mat-label>Password for the Cloud account</mat-label>
+                    <mat-error *ngIf="accountRegistrationForm.controls['password'].hasError('required')">Password is
+                        required
+                    </mat-error>
+                </mat-form-field>
+            </div>
+            <div>
+                <mat-form-field appearance="outline" class="register-account-input">
+                    <input matInput type="password" autocomplete="off" maxlength="25"
+                           [formControl]="getFormControl('confirmPassword')"
+                           (keydown)="confirmOnReturn($event)"
+                           matTooltip="Confirm your Cloud Service password"
+                           matTooltipClass="tooltip"
+                           placeholder="Confirm Password">
+                    <mat-label>Confirm the password</mat-label>
+                    <mat-error *ngIf="accountRegistrationForm.controls['confirmPassword'].hasError('notMatching')">Must
+                        match password
+                    </mat-error>
+                    <mat-error *ngIf="accountRegistrationForm.controls['confirmPassword'].hasError('required')">Confirm
+                        Password is required
+                    </mat-error>
+                </mat-form-field>
+            </div>
+            <div>
+                <mat-form-field appearance="outline" class="email-input">
+                    <input matInput type="email" autocomplete="off" maxlength="40"
+                           [formControl]="getFormControl('email')"
+                           (keydown)="confirmOnReturn($event)"
+                           matTooltip="Enter your email address. This is required to provide a means of resetting forgotten passwords"
+                           matTooltipClass="tooltip"
+                           placeholder="email address">
+                    <mat-label>Your email address</mat-label>
+                    <mat-error *ngIf="accountRegistrationForm.controls['email'].hasError('pattern')">Please enter valid
+                        email address
+                    </mat-error>
+                </mat-form-field>
+            </div>
+            <div>
+                <mat-form-field appearance="outline" class="email-input">
+                    <input matInput type="email" autocomplete="off" maxlength="40"
+                           [formControl]="getFormControl('confirmEmail')"
+                           (keydown)="confirmOnReturn($event)"
+                           matTooltip="Confirm your email address"
+                           matTooltipClass="tooltip"
+                           placeholder="Confirm email address">
+                    <mat-label>Confirm email address</mat-label>
+                    <mat-error *ngIf="accountRegistrationForm.controls['confirmEmail'].hasError('notMatching')">Must
+                        match email address
+                    </mat-error>
+                </mat-form-field>
+            </div>
+            <span class="cam-creds-confirm-group">
       <button color="cancel" mat-raised-button (click)="hideRegisterForm()"
-              matTooltip="{{successMessage == '' ? 'Close this dialogue and abandon setting up an account': 'Close this dialogue box'}}"
+              matTooltip="{{!success ? 'Close this dialogue and abandon setting up an account': 'Close this dialogue box'}}"
               matTooltipClass="tooltip">
-        {{successMessage == '' ? 'Cancel' : 'Exit'}}
+        {{!success ? 'Cancel' : 'Exit' }}
       </button>
               <span>&nbsp;&nbsp;</span>
       <button color="warn" mat-raised-button
-              [disabled]="anyInvalid() || successMessage != ''"
+              [disabled]="anyInvalid() || success"
               (click)="register()"
               matTooltip="Login into the CCTV Cloud Service with the given username and password"
               matTooltipClass="tooltip">
         Register Account
       </button>
     </span>
-    </mat-card-content>
-  </mat-card>
+        </mat-card-content>
+    </mat-card>
 </div>
 
 
